Fix:Diagnosis and labOrder
